# cleanON

./: .gitignore  AGENTS.md  Cargo.toml  TASKS.md  package.json  pnpm-lock.yaml
.codex/skills/smart-file-organizer/: SKILL.md
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: main.ts  mockData.ts  styles.css  tauriClient.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/ai-gateway/: Cargo.toml
crates/ai-gateway/src/: lib.rs
crates/classifier/: Cargo.toml
crates/classifier/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/planner/: Cargo.toml
crates/planner/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/rollback/: Cargo.toml
crates/rollback/src/: lib.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: lib.rs
crates/skill-engine/: Cargo.toml
crates/skill-engine/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
docs/: ARCHITECTURE.md  CONTRACTS.md  SAFETY.md  testing.md
migrations/: 0001_storage_skill_ai.sql
scripts/: ci-frontend.sh  ci-rust.sh
