[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/core",
  "crates/scanner",
  "crates/classifier",
  "crates/planner",
  "crates/executor",
  "crates/rollback",
  "crates/storage",
  "crates/skill-engine",
  "crates/ai-gateway",
  "crates/platform",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
