[package]
name = "smart-file-organizer-classifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
smart-file-organizer-core = { path = "../core" }

[dev-dependencies]
chrono.workspace = true
tokio.workspace = true
uuid.workspace = true
