[package]
name = "smart-file-organizer-rollback"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
smart-file-organizer-core = { path = "../core" }
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
uuid.workspace = true
