[package]
name = "smart-file-organizer-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
smart-file-organizer-core = { path = "../core" }
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
